Chage in carousel cards

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <section class="intro container">
     <h2>Let's flow.</h2>
     <p>
-    Hi I'm Lisa! A certified yoga teacher from Los Angeles. Yoga with Lisa is an AI-powered wellness platform that features personalized yoga classes, meditations, and nutrition all in one place — adapting to your body, your cycle, and your lifestyle in real time.  
+    Hi I'm Lisa! A RYS-200 certified yoga teacher from Los Angeles,CA. Yoga with Lisa is an AI-powered wellness platform that features personalized yoga classes, meditations, and nutrition all in one place — adapting to your body, your cycle, and your lifestyle in real time.  
     </p>
   </section>
 
@@ -124,10 +124,10 @@
 
     <!-- Card 4 -->
     <article class="card">
-      <a class="card-link" href="#blog">
-        <img class="card-img img-default" src="images/card-blog-default.jpg" alt="Blog">
-        <img class="card-img img-hover"   src="images/card-blog-hover.jpg"   alt="" aria-hidden="true">
-        <div class="card-cta"><span>Blog</span></div>
+      <a class="card-link" href="#travel">
+        <img class="card-img img-default" src="images/card-travel-default.jpg" alt="Travel">
+        <img class="card-img img-hover"   src="images/card-travel-hover.jpg"   alt="" aria-hidden="true">
+        <div class="card-cta"><span>Travel</span></div>
       </a>
     </article>
   </div>
@@ -205,7 +205,7 @@
     <p>
       Dr. Lisa Eshun-Wilson receieved her PhD in Molecular and Cell Biology from UC Berkeley. Her passion for longevity and AI research inspired her journey to not only practice yoga in her free time but, ultimately, to teach and build community around this transformative practice. Her mission? Build tools and systems that motivate you to practice consistently and watch your body and mind transform for the better.
     </p>
-    <a class="btn btn-pill btn-outline" href="https://www.lisaeshunwilson.com/">LISA THE SCIENTIST</a>
+    <a class="btn btn-pill btn-outline" href="lisatheyogi.html">LISA THE YOGI</a>
   </div>
 </section>
 
