Yoga index page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   	Awaken your <em>inner</em> yogi.  
       </h1>
   <div class="hero-ctas">
-        <a class="btn btn-dark btn-pill" href="yoga.html">START YOUR FREE TRIAL TODAY</a>
+        <a class="btn btn-dark btn-pill" href="login.html">START YOUR FREE TRIAL TODAY</a>
       </div>
     </div>
   </section>
@@ -49,7 +49,7 @@
   <section class="intro container">
     <h2>Let's flow.</h2>
     <p>
-    Hi I'm Lisa! A RYS-200 certified yoga teacher from Los Angeles, CA. Yoga with Lisa is an wellness platform that features personalized yoga classes, meditations, and nutrition all in one place — adapting to your body, your cycle, and your lifestyle in real time.  
+    Hi I'm Lisa! A certified yoga teacher from Los Angeles, CA. Yoga with Lisa is an wellness platform that features personalized yoga classes, meditations, and nutrition all in one place — adapting to your body, your cycle, and your lifestyle in real time.  
     </p>
   </section>
 
