Yoga index page update

--- a/yoga.html
+++ b/yoga.html
@@ -116,7 +116,7 @@
     <!-- Card 3 -->
     <article class="card">
       <a class="card-link" href="#corerestore">
-        <img class="card-img img-default" src="images/core-restore-default.jpg" alt="Core-Restore">
+        <img class="card-img img-default" src="images/core-restore-default.jpg" alt="Core Restore">
         <img class="card-img img-hover"   src="images/core-restore-hover.jpg"   alt="" aria-hidden="true">
         <div class="card-cta"><span>Core Restore</span></div>
       </a>
@@ -125,7 +125,7 @@
     <!-- Card 4 -->
     <article class="card">
       <a class="card-link" href="#bootybotox">
-        <img class="card-img img-default" src="images/bootybotox-default.jpg" alt="Travel">
+        <img class="card-img img-default" src="images/bootybotox-default.jpg" alt="Booty Botox">
         <img class="card-img img-hover"   src="images/bootybotox-hover.jpg"   alt="" aria-hidden="true">
         <div class="card-cta"><span>Booty Botox</span></div>
       </a>
@@ -161,54 +161,6 @@
   </div>
 </section>
 
-<!-- =================== Instagram Carousel =================== -->
-<section class="ig card" aria-label="Instagram">
-  <div class="ig-head">
-    <h3>you + lisa</h3>
-    <a class="btn btn-pill btn-outline" href="https://instagram.com/lisaeshunwilson" target="_blank" rel="noopener">
-      FIND US ON SOCIAL
-    </a>
-  </div>
-
-  <div class="ig-wrap">
-    <button class="ig-nav ig-prev" aria-label="Previous">‹</button>
-
-    <div class="ig-track" id="igTrack">
-      <!-- Replace these image paths with your own (local images or CDN) -->
-      <a class="ig-card" href="#" aria-label="Instagram post 1">
-        <img src="images/ig/ig1.jpg" alt="Yoga with Lisa — post 1" />
-      </a>
-      <a class="ig-card" href="#" aria-label="Instagram post 2">
-        <img src="images/ig/ig2.jpg" alt="Yoga with Lisa — post 2" />
-      </a>
-      <a class="ig-card" href="#" aria-label="Instagram post 3">
-        <img src="images/ig/ig3.jpg" alt="Yoga with Lisa — post 3" />
-      </a>
-      <a class="ig-card" href="#" aria-label="Instagram post 4">
-        <img src="images/ig/ig4.jpg" alt="Yoga with Lisa — post 4" />
-      </a>
-      <a class="ig-card" href="#" aria-label="Instagram post 5">
-        <img src="images/ig/ig5.jpg" alt="Yoga with Lisa — post 5" />
-      </a>
-    </div>
-
-    <button class="ig-nav ig-next" aria-label="Next">›</button>
-  </div>
-</section>
-
-<!-- =================== Founder Banner =================== -->
-<section class="founder message" aria-label="Our founder">
-  <div class="founder-media" style="background-image:url('images/founder.jpg')"></div>
-  <div class="founder-overlay"></div>
-  <div class="founder-inner container">
-    <h2>meet the founder</h2>
-    <p>
-      Dr. Lisa Eshun-Wilson receieved her PhD in Molecular and Cell Biology from UC Berkeley. Her passion for longevity and AI research inspired her journey to not only practice yoga in her free time but, ultimately, to teach and build community around this transformative practice. Her mission? Build tools and systems that motivate you to practice consistently and watch your body and mind transform for the better.
-    </p>
-    <a class="btn btn-pill btn-outline" href="https://available-tarsal-b72.notion.site/Lisa-the-Yogi-2746b96c1321807a9f28fddbb373cf88">LISA THE YOGI</a>
-  </div>
-</section>
-
   <footer class="site-footer">
     <div class="container">
       <p>© <span id="y"></span> YOGA WITH LISA BY LISA ESHUN-WILSON & ASSOCIATES,LLC. / ALL RIGHTS RESERVED</p>
@@ -217,10 +169,6 @@
 
 <div class="container" style="padding: 0 16px;">
   <!-- membership section here -->
-</div>
-
-<div class="container" style="padding: 0 16px;">
-  <!-- founder section here -->
 </div>
 
 </body>
