--- a/yoga.html
+++ b/yoga.html
@@ -96,7 +96,7 @@
         <!-- default image -->
         <img class="card-img img-default" src="images/sept19-greenyogi-flyer-default.jpg" alt="Pop-Up Classes" loading="lazy">
         <!-- hover/alt image -->
-        <img class="card-img img-hover"   src="images/sept19-greenyogi-flyer-hover.jpg.jpg"   alt="" aria-hidden="true">
+        <img class="card-img img-hover"   src="images/sept19-greenyogi-flyer-hover.jpg"   alt="" aria-hidden="true">
         <div class="card-tag">Pop-Up Classes</div>
         <div class="card-cta">
           <span>Pop-Up Classes</span>
