Add payment links

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <link rel="icon" href="images/favicon.png">
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500;1,700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+ <!-- Memberstack Script -->
+ <script src="https://api.memberstack.io/static/memberstack.js?custom" data-memberstack-id="pk_f2c8df1bd82da003cc34"></script>
+
 </head>
 
 <body>
