--- a/yoga.html
+++ b/yoga.html
@@ -49,7 +49,7 @@
   <section class="intro container">
     <h2>A lil' mo' cardio.</h2>
     <p>
-    Whether you are looking for something upbeat and filled with action or a chance to decompress and let go on your mat, we've got you covered. Welcome to our extensive library of hundreds of yoga classes, that we hope will meet your every need.   
+    Whether you are looking for something upbeat and filled with action or a chance to decompress and melt into your mat, we've got you covered. Welcome to our extensive library of hundreds of yoga classes, that we hope will meet your every need.   
     </p>
   </section>
 
@@ -94,43 +94,22 @@
     <article class="card">
       <a class="card-link" href="https://partiful.com/e/KKvYNm7SQLW4SXslqEhJ">
         <!-- default image -->
-        <img class="card-img img-default" src="images/sept19-greenyogi-flyer-default.jpg" alt="Pop-Up Classes" loading="lazy">
+        <img class="card-img img-default" src="images/sept19-greenyogi-flyer-default.jpg" alt="Pop Up" loading="lazy">
         <!-- hover/alt image -->
         <img class="card-img img-hover"   src="images/sept19-greenyogi-flyer-hover.jpg"   alt="" aria-hidden="true">
-        <div class="card-tag">Pop-Up Classes</div>
         <div class="card-cta">
-          <span>Pop-Up Classes</span>
         </div>
       </a>
     </article>
 
     <!-- Card 2 -->
     <article class="card">
-      <a class="card-link" href="#glowlift">
-        <img class="card-img img-default" src="images/glow-lift-series-default.jpg" alt="Glow Lift">
-        <img class="card-img img-hover"   src="images/glow-lift-series-hover.jpg"   alt="" aria-hidden="true">
-        <div class="card-cta"><span>Glow Lift</span></div>
+      <a class="card-link" href="https://partiful.com/e/TCEOyAKeVyFvav9ayY30?">
+        <img class="card-img img-default" src="images/oct18-greenyogi-flyer-default.jpg" alt="Pop Up">
+        <img class="card-img img-hover"   src="images/oct18-greenyogi-flyer-hover.jpg"   alt="" aria-hidden="true">
       </a>
     </article>
-
-    <!-- Card 3 -->
-    <article class="card">
-      <a class="card-link" href="#corerestore">
-        <img class="card-img img-default" src="images/core-restore-default.jpg" alt="Core Restore">
-        <img class="card-img img-hover"   src="images/core-restore-hover.jpg"   alt="" aria-hidden="true">
-        <div class="card-cta"><span>Core Restore</span></div>
-      </a>
-    </article>
-
-    <!-- Card 4 -->
-    <article class="card">
-      <a class="card-link" href="#bootybotox">
-        <img class="card-img img-default" src="images/bootybotox-default.jpg" alt="Booty Botox">
-        <img class="card-img img-hover"   src="images/bootybotox-hover.jpg"   alt="" aria-hidden="true">
-        <div class="card-cta"><span>Booty Botox</span></div>
-      </a>
-    </article>
-  </div>
+    </div>
 </section>
 
 <!-- =================== Membership Banner =================== -->
