Add new bullet journal cards

--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
 
     <!-- Card 4 -->
     <article class="card">
-      <a class="card-link" href="#travel">
-        <img class="card-img img-default" src="images/card-travel-default.jpg" alt="Travel">
-        <img class="card-img img-hover"   src="images/card-travel-hover.jpg"   alt="" aria-hidden="true">
-        <div class="card-cta"><span>Travel</span></div>
+      <a class="card-link" href="#journal">
+        <img class="card-img img-default" src="images/card-journal-default.jpg" alt="Travel">
+        <img class="card-img img-hover"   src="images/card-journal-hover.jpg"   alt="" aria-hidden="true">
+        <div class="card-cta"><span>Journal</span></div>
       </a>
     </article>
   </div>
@@ -161,7 +161,7 @@
     <p>
       <strong>Monthly pricing: $16.99 USD | Yearly pricing $169.99</strong><em>(2 Months Free!)</em>  
     </p>
-    <a class="btn btn-pill btn-outline" href="membership.html">SUBSCRIBE NOW</a>
+    <a class="btn btn-pill btn-outline" href="login.html">SUBSCRIBE NOW</a>
   </div>
 </section>
 
