--- a/yoga.html
+++ b/yoga.html
@@ -30,14 +30,14 @@
 
   <!-- Hero (image) -->
   <section class="hero hero--image" role="banner" aria-label="Hero">
-    <!-- Set your image at images/hero.jpg -->
-    <div class="hero-media" style="background-image:url('images/hero.jpg');" aria-hidden="true"></div>
+    <!-- Set your image at images/yoga-hero.jpg -->
+    <div class="hero-media" style="background-image:url('images/yoga-hero.jpg');" aria-hidden="true"></div>
     <div class="hero-overlay" aria-hidden="true"></div>
 
     <div class="hero-inner">
       <h1 class="display">
-  	<span class="nowrap">Your <em>dream</em> body awaits.</span><br/>
-  	Awaken your <em>inner</em> yogi.  
+  	<span class="nowrap">Balance <em>challenges</em> are my favorite.</span><br/>
+  	Let's <em>fly</em> yogis.  
       </h1>
   <div class="hero-ctas">
         <a class="btn btn-dark btn-pill" href="login.html">START YOUR FREE TRIAL TODAY</a>
@@ -47,9 +47,9 @@
 
   <!-- Minimal Intro -->
   <section class="intro container">
-    <h2>A lil' mo' cardio.</h2>
+    <h2>Yoga every way you need it, every day you want it ✨</h2>
     <p>
-    Whether you are looking for something upbeat and filled with action or a chance to decompress and melt into your mat, we've got you covered. Welcome to our extensive library of hundreds of yoga classes, that we hope will meet your every need.   
+From energizing flows to restful resets, we’ve got you covered. Join our free in-person pop-ups, or unlock our full library of yoga and meditation with a premium subscription. Side effects may include strength, softness, and joy.
     </p>
   </section>
 
