--- a/login.backup.html
+++ b/login.backup.html
@@ -64,7 +64,9 @@
       <a class="brand" href="index.html">yoga with lisa</a>
       <nav class="main-nav" aria-label="Primary">
         <ul>
-          <li><a href="index.html" class="login-btn">HOME</a></li>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="yoga.html">YOGA</a></li>
+          <li><a href="login.html" class="login-btn">LOGIN</a></li>
         </ul>
       </nav>
     </div>
@@ -77,12 +79,12 @@
         <div class="auth-grid">
           <!-- Left: Copy & Login -->
           <div>
-            <h1>Welcome ✨</h1>
+            <h1>Welcome back 👋</h1>
             <p class="lead">Log in to access member content, your class library, and your billing portal.</p>
 
             <!-- Replace YOUR_LOGIN_LINK with the link you copy from Memberstack (Login modal / portal) -->
             <a class="btn btn-dark btn-pill"
-               data-ms-modal="login">LOGIN</a>
+               href="YOUR_LOGIN_LINK">LOG IN</a>
 
             <hr style="margin:24px 0; border:none; border-top:1px solid #eee;">
 
@@ -91,16 +93,14 @@
 
             <div class="plan-stack">
               <!-- Replace each href with the exact checkout/sign-up link from Memberstack -->
-              <a class="btn btn-pill btn-dark btn-wide"
+              <a class="btn btn-pill btn-outline btn-wide"
                  href="pln_free-plan-pqjp04f9">Create a FREE account</a>
               <a class="btn btn-pill btn-dark btn-wide"
                  href="pln_monthly-membership-v4j40n2t">Subscribe Now | Monthly Plan for $16.99</a>
               <a class="btn btn-pill btn-dark btn-wide"
-                 href="pln_annual-membership--enj60nbm">Subscribe Now | Annual Plan for $169.99</a>
-              <p class="plan-note">
-                 Change or cancel anytime. Practice, breathe, give back: 1.5% of proceeds go to permanent carbon capture efforts,                    thanks to<a href="https://stripe.com/climate" target="_blank" rel="noopener">Stripe Climate</a>.
-              </p> 
-	    </div>
+                 href="pln_annual-membership--enj60nbm">Subscribe Now | Annual Plan for $169.99/yr</a>
+              <p class="plan-note">You can change or cancel anytime from your account portal.</p>
+            </div>
           </div>
 
           <!-- Right: Perks / Assurance -->
@@ -113,7 +113,7 @@
               <li>Student & community discounts (when available)</li>
             </ul>
             <h3>Questions?</h3>
-            <p>Email <a href="mailto:hello@yogawithlisa.ai">hello@yogawithlisa.ai</a> today</p>
+            <p>Email <a href="mailto:hello@yogawithlisa.ai">hello@yogawithlisa.ai</a> and I got you.</p>
           </aside>
         </div>
       </div>
