Update login page title

--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Login · Yoga with Lisa</title>
+  <title>Login</title>
 
   <!-- Fonts / CSS (same as index) -->
   <link rel="icon" href="images/favicon.png">
