Added back to home button

--- a/login.html
+++ b/login.html
@@ -63,7 +63,6 @@
     <div class="container nav-wrap">
       <nav class="main-nav" aria-label="Primary">
         <ul>
-          <li><a href="index.html" class="login-btn">HOME</a></li>
         </ul>
       </nav>
     </div>
@@ -78,16 +77,6 @@
           <div>
             <h1>Welcome ✨</h1>
             <p class="lead">Log in to access member content, your class library, and your billing portal.</p>
-
-            <!-- Replace YOUR_LOGIN_LINK with the link you copy from Memberstack (Login modal / portal) -->
-            <a class="btn btn-dark btn-pill"
-               data-ms-modal="login">LOGIN</a>
-
-            <hr style="margin:24px 0; border:none; border-top:1px solid #eee;">
-
-            <h2 style="margin:0 0 8px;">New here?</h2>
-            <p class="lead" style="margin:0 0 16px;">Choose a plan to create your account.</p>
-
             <div class="plan-stack">
               <!-- Replace each href with the exact checkout/sign-up link from Memberstack -->
               <a class="btn btn-pill btn-dark btn-wide"
@@ -97,9 +86,9 @@
               <a class="btn btn-pill btn-dark btn-wide"
                  href="pln_annual-membership--enj60nbm">Subscribe Now | Annual Plan for $169.99</a>
               <p class="plan-note">
-                 Change or cancel anytime. Practice, breathe, give back: 1.5% of proceeds go to permanent carbon capture efforts,                    thanks to<a href="https://stripe.com/climate" target="_blank" rel="noopener">Stripe Climate</a>.
+                 Change or cancel anytime. Practice, breathe, give back: 1.5% of proceeds go to permanent carbon removal,                    thanks to <a href="https://stripe.com/climate" target="_blank" rel="noopener">Stripe Climate</a>.
               </p> 
-	    </div>
+            </div>
           </div>
 
           <!-- Right: Perks / Assurance -->
@@ -112,11 +101,15 @@
               <li>Student & community discounts (when available)</li>
             </ul>
             <h3>Questions?</h3>
-            <p>Email <a href="mailto:hello@yogawithlisa.ai">hello@yogawithlisa.ai</a> today</p>
+            <p>Email <a href="mailto:hello@yogawithlisa.ai">support@yogawithlisa.ai</a> today.</p>
           </aside>
         </div>
       </div>
     </div>
+<!-- Back to home -->
+<div class="container back-home-wrap">
+  <a class="btn btn-pill btn-dark" href="index.html" aria-label="Back to home">HOME</a>
+</div>
   </section>
 
   <!-- Footer -->
