Updated location of the back to home button

--- a/login.html
+++ b/login.html
@@ -86,7 +86,7 @@
               <a class="btn btn-pill btn-dark btn-wide"
                  href="pln_annual-membership--enj60nbm">Subscribe Now | Annual Plan for $169.99</a>
               <p class="plan-note">
-                 Change or cancel anytime. Practice, breathe, give back: 1.5% of proceeds go to permanent carbon removal,                    thanks to <a href="https://stripe.com/climate" target="_blank" rel="noopener">Stripe Climate</a>.
+                 Change or cancel anytime. Practice, breathe, give back—1.5% of proceeds go to permanent carbon removal                              thanks to <a href="https://stripe.com/climate" target="_blank" rel="noopener">Stripe Climate</a>.
               </p> 
             </div>
           </div>
@@ -101,15 +101,15 @@
               <li>Student & community discounts (when available)</li>
             </ul>
             <h3>Questions?</h3>
-            <p>Email <a href="mailto:hello@yogawithlisa.ai">support@yogawithlisa.ai</a> today.</p>
+            <p>Email <a href="mailto:hello@yogawithlisa.ai">us</a> today.</p>
           </aside>
+  	<!-- Back to home button inside second column -->
+	<div class="back-home-wrap">
+  	<a class="btn btn-pill btn-dark" href="index.html" aria-label="Back to home">BACK TO HOME</a>
+	</div>
+
         </div>
       </div>
-    </div>
-<!-- Back to home -->
-<div class="container back-home-wrap">
-  <a class="btn btn-pill btn-dark" href="index.html" aria-label="Back to home">HOME</a>
-</div>
   </section>
 
   <!-- Footer -->
