Updated yoga pop up event card

--- a/yoga.html
+++ b/yoga.html
@@ -90,19 +90,8 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
   <h2 class="visually-hidden">Explore</h2>
 
   <div class="cards-row" tabindex="0">
-    <!-- Card 1 -->
-    <article class="card">
-      <a class="card-link" href="https://partiful.com/e/KKvYNm7SQLW4SXslqEhJ">
-        <!-- default image -->
-        <img class="card-img img-default" src="images/sept19-greenyogi-flyer-default.jpg" alt="Pop Up" loading="lazy">
-        <!-- hover/alt image -->
-        <img class="card-img img-hover"   src="images/sept19-greenyogi-flyer-hover.jpg"   alt="" aria-hidden="true">
-        <div class="card-cta">
-        </div>
-      </a>
-    </article>
 
-    <!-- Card 2 -->
+    <!-- Card 1 -->
     <article class="card">
       <a class="card-link" href="https://partiful.com/e/TCEOyAKeVyFvav9ayY30?">
         <img class="card-img img-default" src="images/oct18-greenyogi-flyer-default.jpg" alt="Pop Up">
@@ -110,6 +99,31 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
       </a>
     </article>
     </div>
+
+<!-- Card 2 -->
+    <article class="card">
+      <a class="card-link" href="https://partiful.com/e/KKvYNm7SQLW4SXslqEhJ">
+        <!-- default image -->
+        <img class="card-img img-default" src="images/sept19-greenyogi-flyer-default.jpg" alt="" loading="lazy">
+        <!-- hover/alt image -->
+        <img class="card-img img-hover"   src="images/sept19-greenyogi-flyer-hover.jpg"   alt="" aria-hidden="true">
+        <div class="card-cta">
+        </div>
+      </a>
+    </article>
+
+<!-- Card 3 -->
+    <article class="card">
+      <a class="card-link" href="https://partiful.com/e/KKvYNm7SQLW4SXslqEhJ">
+        <!-- default image -->
+        <img class="card-img img-default" src="images/aug19-greenyogi-flyer-default.jpg" alt="" loading="lazy">
+        <!-- hover/alt image -->
+        <img class="card-img img-hover"   src="images/aug19-greenyogi-flyer-hover.jpg"   alt="" aria-hidden="true">
+        <div class="card-cta">
+        </div>
+      </a>
+    </article>
+
 </section>
 
 <!-- =================== Membership Banner =================== -->
