Updated yoga hero and card div

--- a/yoga.html
+++ b/yoga.html
@@ -100,30 +100,25 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
     </article>
     </div>
 
-<!-- Card 2 -->
+    <!-- Card 2 -->
     <article class="card">
       <a class="card-link" href="https://partiful.com/e/KKvYNm7SQLW4SXslqEhJ">
-        <!-- default image -->
-        <img class="card-img img-default" src="images/sept19-greenyogi-flyer-default.jpg" alt="" loading="lazy">
-        <!-- hover/alt image -->
-        <img class="card-img img-hover"   src="images/sept19-greenyogi-flyer-hover.jpg"   alt="" aria-hidden="true">
-        <div class="card-cta">
-        </div>
+        <img class="card-img img-default" src="images/sep19-greenyogi-flyer-default.jpg" alt="Pop Up">
+        <img class="card-img img-hover"   src="images/sep19-greenyogi-flyer-hover.jpg"   alt="" aria-hidden="true">
       </a>
     </article>
+    </div>
 
-<!-- Card 3 -->
+
+    <!-- Card 3 -->
     <article class="card">
-      <a class="card-link" href="https://partiful.com/e/KKvYNm7SQLW4SXslqEhJ">
-        <!-- default image -->
-        <img class="card-img img-default" src="images/aug19-greenyogi-flyer-default.jpg" alt="" loading="lazy">
-        <!-- hover/alt image -->
+      <a class="card-link" href="https://partiful.com/e/TCEOyAKeVyFvav9ayY30?">
+        <img class="card-img img-default" src="images/aug19-greenyogi-flyer-default.jpg" alt="Pop Up">
         <img class="card-img img-hover"   src="images/aug19-greenyogi-flyer-hover.jpg"   alt="" aria-hidden="true">
-        <div class="card-cta">
-        </div>
       </a>
     </article>
-
+    </div>
+</div>
 </section>
 
 <!-- =================== Membership Banner =================== -->
