Updated yoga page message

--- a/yoga.html
+++ b/yoga.html
@@ -36,8 +36,8 @@
 
     <div class="hero-inner">
       <h1 class="display">
-  	<span class="nowrap">Balance <em>challenges</em> are my favorite.</span><br/>
-  	Let's <em>fly</em> yogis.  
+  	<span class="nowrap">Yoga <em>every</em> way.</span><br/>
+  	Yoga <em>every</em> day.  
       </h1>
   <div class="hero-ctas">
         <a class="btn btn-dark btn-pill" href="login.html">START YOUR FREE TRIAL TODAY</a>
@@ -47,7 +47,7 @@
 
   <!-- Minimal Intro -->
   <section class="intro container">
-    <h2>Yoga every way you need it, every day you want it ✨</h2>
+    <h2>Find your flow here ✨</h2>
     <p>
 From energizing flows to restful resets, we’ve got you covered. Join our free in-person pop-ups, or unlock our full library of yoga and meditation with a premium subscription. Side effects may include strength, softness, and joy.
     </p>
