Updated memberstack header script

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500;1,700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
- <!-- Memberstack Script -->
- <script src="https://api.memberstack.io/static/memberstack.js?custom" data-memberstack-id="pk_f2c8df1bd82da003cc34"></script>
+<!-- Memberstack (vanilla) -->
+<script
+  data-memberstack-app="app_cmfs64j5s00jl0wu4h1ee40in"
+  src="https://static.memberstack.com/scripts/v1/memberstack.js"
+  type="text/javascript">
+</script>
 
 </head>
 
