--- a/login.html
+++ b/login.html
@@ -101,7 +101,7 @@
               <li>Student & community discounts (when available)</li>
             </ul>
             <h3>Questions?</h3>
-            <p>Email us at <a href="mailto:hello@yogawithlisa.ai">hello@yogawithlisa.ai</a> today.</p>
+            <p>Email us at <a href="mailto:hello@yogawithlisa.ai">lisa@yogawithlisa.ai</a> today.</p>
           </aside>
   	<!-- Back to home button inside second column -->
 	<div class="back-home-wrap">
