Updated Memberstack code

--- a/login.html
+++ b/login.html
@@ -77,16 +77,33 @@
           <div>
             <h1>Welcome ✨</h1>
             <p class="lead">Log in to access member content, your class library, and your billing portal.</p>
-            <div class="plan-stack">
-              <!-- Replace each href with the exact checkout/sign-up link from Memberstack -->
-              <a class="btn btn-pill btn-dark btn-wide"
-                 href="pln_free-plan-pqjp04f9">Create a FREE account</a>
-              <a class="btn btn-pill btn-dark btn-wide"
-                 href="pln_monthly-membership-v4j40n2t">Subscribe Now | Monthly Plan for $16.99</a>
-              <a class="btn btn-pill btn-dark btn-wide"
-                 href="pln_annual-membership--enj60nbm">Subscribe Now | Annual Plan for $169.99</a>
-              <p class="plan-note">
-                 Change or cancel anytime. Practice, breathe, give back—1.5% of proceeds go to permanent carbon removal                              thanks to <a href="https://stripe.com/climate" target="_blank" rel="noopener">Stripe Climate</a>.
+	<div class="plan-stack">
+  	<!-- Free -->
+  	<a class="btn btn-pill btn-dark btn-wide"
+    	 href="#"
+     	data-ms-plan="pln_free-plan-pqjp04f9">
+     	Create a FREE account
+  	</a>
+
+  	<!-- Monthly -->
+  	<a class="btn btn-pill btn-dark btn-wide"
+     	href="#"
+     	data-ms-plan="pln_monthly-membership-v4j40n2t">
+     	Subscribe Now | Monthly Plan for $16.99
+  	</a>
+
+  	<!-- Annual -->
+  	<a class="btn btn-pill btn-dark btn-wide"
+     	href="#"
+     	data-ms-plan="pln_annual-membership--enj60nbm">
+     	Subscribe Now | Annual Plan for $169.99
+  	</a>
+
+  	<p class="plan-note">
+    	Change or cancel anytime. Practice, breathe, give back—1.5% of proceeds go to permanent carbon removal thanks to
+    	<a href="https://stripe.com/climate" target="_blank" rel="noopener">Stripe Climate</a>.
+      </p>
+    `</div>           
               </p> 
             </div>
           </div>
