Updated Back to Home Button on Login pg

--- a/login.html
+++ b/login.html
@@ -102,11 +102,9 @@
   	<p class="plan-note">
     	Change or cancel anytime. Practice, breathe, give back—1.5% of proceeds go to permanent carbon removal thanks to
     	<a href="https://stripe.com/climate" target="_blank" rel="noopener">Stripe Climate</a>.
-      </p>
-    `</div>           
-              </p> 
-            </div>
-          </div>
+      </p> 
+    </div>
+  </div>
 
           <!-- Right: Perks / Assurance -->
           <aside>
@@ -118,13 +116,13 @@
               <li>Student & community discounts (when available)</li>
             </ul>
             <h3>Questions?</h3>
-            <p>Email us at <a href="mailto:hello@yogawithlisa.ai">lisa@yogawithlisa.ai</a> today.</p>
+            <p>Email us at <a href="mailto:lisa@yogawithlisa.ai">lisa@yogawithlisa.ai</a> today.</p>
           </aside>
   	<!-- Back to home button inside second column -->
 	<div class="back-home-wrap">
   	<a class="btn btn-pill btn-dark" href="index.html" aria-label="Back to home">BACK TO HOME</a>
-	</div>
-
+     </div>
+   </aside>
         </div>
       </div>
   </section>
